# Qt

./: .gitignore
Task-1-Gallary/: CMakeLists.txt  GalleryModel.cpp  GalleryModel.h  GalleryScreen.qml  Spalsh.qml  TempReader.cpp  TempReader.h  spalsh.cpp
Task-1-Gallary/gallery/: gallery.json
Task-2-Calculator/: CMakeLists.txt  Calculator  Calculator.cpp  Calculator.qml
Task-2-blt-wifi-ctrl/: Bluetooth-Manager.cpp  Bluetooth-Manager.h  CMakeLists.txt  Main.qml  Wifi-Manager.cpp  Wifi-Manager.h  WifiManagerApp  main.cpp
Task-3-Rpi-3B-Plus-Gpio-ctrl/: CMakeLists.txt  GpioController.cpp  GpioController.h  Main.qml  RpiGpioCtrl  main.cpp
Task-3-WeatherApp-Atmos/: Atmos  Atmos.cpp  Atmos.qml  CMakeLists.txt  WeatherBackend.cpp  WeatherBackend.h
